Signed-off-by: DamithDeshan <hkddrajapaksha@gmail.com>

--- a/src/main/webapp/store/store_retail_sale_bht.xhtml
+++ b/src/main/webapp/store/store_retail_sale_bht.xhtml
@@ -85,7 +85,7 @@
 
                                         <p:panel id="gpDetail" header="Patient Details">
                                             <h:panelGrid class="w-100">
-                                                <in:bhtDetail admission="#{billBhtController.patientEncounter}"/> 
+                                                <in:bhtDetail admission="#{storeSaleBhtController.patientEncounter}"/> 
                                             </h:panelGrid>
                                         </p:panel>
 
