--- a/src/main/webapp/opd/opd_pre_bill.xhtml
+++ b/src/main/webapp/opd/opd_pre_bill.xhtml
@@ -302,15 +302,14 @@
                                         
                                     </div>
                                     
-
-                                    <div class="row mt-2" >
+                                    <div class="row my-1 mt-2" >
                                         <div class="col-md-8" >
                                             <p:inputText 
                                                 value="#{opdBillController.comment}" 
                                                 placeholder="Comments"
                                                 class="w-100"         
                                                 id="comment"/>
-                                        </div> 
+                                        </div>
 
                                         <h:panelGroup id="gpLocalForeign" layout="block"  class="col-md-4" >
                                             <p:commandButton value="Mark Foreigner" 
