--- a/src/main/webapp/opd/opd_pre_bill.xhtml
+++ b/src/main/webapp/opd/opd_pre_bill.xhtml
@@ -67,7 +67,7 @@
                                 <h:panelGroup id="panelIx" >
 
 
-                                    <p:panel id='pIxAdd' class="w-100" >
+                                    <p:panel id='pIxAdd' class="w-100 mb-1" >
                                         <f:facet name="header" >
                                             <h:outputText styleClass="fa-solid fa-circle-plus" /> <!-- FontAwesome Icon -->
                                             <h:outputText value="Add New Items" class="mx-4"></h:outputText>
