--- a/src/main/webapp/resources/ezcomp/common/patient_details.xhtml
+++ b/src/main/webapp/resources/ezcomp/common/patient_details.xhtml
@@ -15,7 +15,7 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <p:panel class="my-1" id="panelPatient" rendered="#{cc.attrs.patient.editingMode}">
+        <p:panel class="mb-1" id="panelPatient" rendered="#{cc.attrs.patient.editingMode}">
             <p:growl id="msg"/>
             <f:facet name="header" >
                 <h:panelGroup id="headerFacet">
@@ -223,6 +223,7 @@
                 <p:tooltip for="cmbSex" value="Sex"  showDelay="0" hideDelay="0"></p:tooltip>
                 <p:tooltip for="cmbTitle" value="Title"  showDelay="0" hideDelay="0"></p:tooltip>
                 <p:tooltip for="acNewPtArea" value="Area"  showDelay="0" hideDelay="0"></p:tooltip>
+                <p:tooltip for="txtEmail" value="Email"  showDelay="0" hideDelay="0"></p:tooltip>
 
 
             </h:panelGroup>
