--- a/src/main/webapp/bill_all_view.xhtml
+++ b/src/main/webapp/bill_all_view.xhtml
@@ -30,7 +30,7 @@
                                         <h:outputLabel value="Staff ​Name:" ></h:outputLabel>
                                         <h:outputLabel value="#{billSearch.billSearch.staff.person.nameWithTitle }"></h:outputLabel> 
                                         <h:outputLabel value="Age" />
-                                        <h:outputLabel value="#{billSearch.billSearch.patient.age}"  />
+                                        <h:outputLabel value="#{billSearch.billSearch.patient.person.ageAsString}"  />
                                         <h:outputLabel value="Sex" >
                                         </h:outputLabel>
                                         <h:outputLabel value="#{billSearch.billSearch.patient.person.sex}" >
