--- a/src/main/webapp/opd_search_billitem_own.xhtml
+++ b/src/main/webapp/opd_search_billitem_own.xhtml
@@ -84,7 +84,7 @@
                                             <f:setPropertyActionListener value="#{pi.bill.patient}" target="#{patientController.current}"/>
                                         </h:commandLink>
                                         <br/>
-                                        <h:outputLabel value="#{pi.bill.patient.age}" >
+                                        <h:outputLabel value="#{pi.bill.patient.person.ageAsString}" >
                                         </h:outputLabel>
                                         <br/>
                                         <h:outputLabel value="#{pi.bill.patient.person.sex}" >
