closes #1927 Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_2.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_retail_sale_2.xhtml
@@ -357,7 +357,7 @@
                                                             </h:panelGroup>
                                                         </div>
                                                     </div>
-                                                    <h:panelGrid columns="2" my-2>
+                                                    <h:panelGrid columns="2" class="my-2">
                                                         <p:outputLabel value="Referring Doctor" ></p:outputLabel>
                                                         <p:autoComplete forceSelection="true" id="cmbDoc" value="#{pharmacySaleController2.preBill.referredBy}" 
                                                                         completeMethod="#{doctorController.completeDoctor}" 
@@ -370,30 +370,30 @@
                                                         <p:inputTextarea class="w-100 mx-4" value="#{pharmacySaleController2.comment}" id="comment"/>
                                                     </h:panelGrid>
                                                 </p:panel>
-                                                <p:panel header="Bill Details" id="pBillDetails"  >
-                                                    <p:panelGrid columns="2" columnClasses="numberCol, textCol"  >
+                                                <p:panel header="Bill Details" id="pBillDetails" class="my-1" >
+                                                    <h:panelGrid columns="2" columnClasses="numberCol, textCol"  >
                                                         <h:outputLabel value="Total" ></h:outputLabel>
-                                                        <h:outputLabel id="total" value="#{pharmacySaleController2.preBill.total}" >
+                                                        <h:outputLabel class="mx-4 my-1" id="total" value="#{pharmacySaleController2.preBill.total}" >
                                                             <f:convertNumber pattern="#,##0.00" />
                                                         </h:outputLabel>
                                                         <h:outputLabel value="Discount" ></h:outputLabel>
-                                                        <h:outputLabel id="dis" value="#{pharmacySaleController2.preBill.discount}" >
+                                                        <h:outputLabel class="mx-4 my-1" id="dis" value="#{pharmacySaleController2.preBill.discount}" >
                                                             <f:convertNumber pattern="#,##0.00" />
                                                             <p:ajax process="total dis netTotal paid" update="balance netTotal" event="blur"/>
                                                         </h:outputLabel>
                                                         <h:outputLabel value="Net Total" ></h:outputLabel>
-                                                        <h:outputLabel id="netTotal" value="#{pharmacySaleController2.preBill.netTotal}" >
+                                                        <h:outputLabel class="mx-4 my-1" id="netTotal" value="#{pharmacySaleController2.preBill.netTotal}" >
                                                             <f:convertNumber pattern="#,##0.00" />
                                                         </h:outputLabel>
                                                         <h:outputLabel  value="Tendered" ></h:outputLabel>
-                                                        <p:inputText autocomplete="off" accesskey="t" id="paid" value="#{pharmacySaleController2.cashPaid}" >
+                                                        <p:inputText class="mx-4 my-1" autocomplete="off" accesskey="t" id="paid" value="#{pharmacySaleController2.cashPaid}" >
                                                             <p:ajax process="total dis netTotal paid" update="balance netTotal" event="blur"/>
                                                         </p:inputText>
                                                         <h:outputLabel  value="Balance" ></h:outputLabel>
-                                                        <h:outputLabel id="balance" value="#{pharmacySaleController2.balance}" >
+                                                        <h:outputLabel class="mx-4 my-1" id="balance" value="#{pharmacySaleController2.balance}" >
                                                             <f:convertNumber pattern="#,##0.00" />
                                                         </h:outputLabel>
-                                                    </p:panelGrid>
+                                                    </h:panelGrid>
 
                                                 </p:panel>
 
@@ -462,10 +462,10 @@
                                                         </p:tab>
 
                                                         <p:tab id="tabCredit" title="Credit"  >
-                                                            <p:panelGrid columns="3" >
+                                                            <h:panelGrid columns="3" >
                                                                 <p:outputLabel value="Credit Company" ></p:outputLabel>
                                                                 <p:autoComplete  style="width: 400px;" 
-
+                                                                                 class="mx-4"
                                                                                  forceSelection="true" 
                                                                                  value="#{pharmacySaleController2.toInstitution}" 
                                                                                  id="scCreditCompany"
@@ -489,7 +489,7 @@
                                                                                  var="mys" 
                                                                                  itemLabel="#{mys.person.nameWithTitle}" 
                                                                                  itemValue="#{mys}"
-
+                                                                                 class="mx-4"
                                                                                  disabled="#{pharmacySaleController2.paymentMethod ne 'Credit' }">
                                                                     <p:column headerText="Name" >
                                                                         <h:outputLabel value="#{mys.person.nameWithTitle}" ></h:outputLabel>
@@ -510,7 +510,7 @@
 
                                                                 </p:autoComplete>
                                                                 <p:watermark for="scStaff" value="Type at least 3 charactors of Staff member." ></p:watermark>
-                                                            </p:panelGrid>
+                                                            </h:panelGrid>
                                                         </p:tab>
                                                     </p:tabView>
                                                 </p:panel>
