--- a/src/main/webapp/theater/inward_timed_service_consume_surgery.xhtml
+++ b/src/main/webapp/theater/inward_timed_service_consume_surgery.xhtml
@@ -22,7 +22,7 @@
                         value="#{inwardTimedItemController.batchBill}" 
                         completeMethod="#{billController.completeSurgeryBills}"
                         var="apt2" 
-                        itemLabel="#{amp2.bhtNo}"
+                        itemLabel="#{apt2.patientEncounter.bhtNo}"
                         itemValue="#{apt2}" 
                         widgetVar="aPt2"
                         size="30"  
