Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/theater/inward_bill_surgery_professional.xhtml
+++ b/src/main/webapp/theater/inward_bill_surgery_professional.xhtml
@@ -22,7 +22,7 @@
                                                 value="#{inwardProfessionalBillController.batchBill}" 
                                                 completeMethod="#{billController.completeSurgeryBills}"
                                                 var="apt2" 
-                                                itemLabel="#{amp2.bhtNo}"
+                                                itemLabel="#{apt2.patientEncounter.bhtNo}"
                                                 itemValue="#{apt2}" 
                                                 size="30"  
                                                 style="width: 400px;">
