--- a/src/main/webapp/inward/admission_profile.xhtml
+++ b/src/main/webapp/inward/admission_profile.xhtml
@@ -147,10 +147,21 @@
                             <f:facet name="header">
                                 <h:outputText value="Surgeries"></h:outputText>
                             </f:facet>
-                            <div>
+                            <div class="d-grid gap-3">
                                 <p:commandButton 
                                     value="Add Surgeries" 
                                     icon="fa fa-clock"
+                                    action="#{surgeryBillController.navigateToAddSurgeriesFromAdmissionProfile}"
+                                    
+                                    class="w-100">
+                                    <f:setPropertyActionListener
+                                        value="#{admissionController.current}"
+                                        target="#{surgeryBillController.batchBill.patientEncounter}"
+                                    />
+                                </p:commandButton>
+                                <p:commandButton 
+                                    value="Add Professional Fees" 
+                                    icon="fa fa-briefcase"
                                     action="#{surgeryBillController.navigateToAddSurgeriesFromAdmissionProfile}"
                                     
                                     class="w-100">
