--- a/src/main/webapp/resources/paymentMethod/multiple_payment_methods.xhtml
+++ b/src/main/webapp/resources/paymentMethod/multiple_payment_methods.xhtml
@@ -46,7 +46,7 @@
                         </div>
                     </div>
 
-                    <div class="row" >
+                    <div class="row mt-2" >
 
                         <div class="col-12" >
 
